add mobile navigation and design about us page

--- a/todo
+++ b/todo
@@ -18,8 +18,8 @@
 -[] Section: Pricing
 
 ## About Us
--[] Add content
--[] Add testimonials
+-[x] Add content
+-[x] Add testimonials
 -[] Add photos
 
 ## Contact Us
@@ -44,10 +44,12 @@
 -[] Add logos and links to social media (Instagram, LinkedIn, X)
 
 ## Privacy Policy Page
--[] Add privacy policy page
+-[x] Add privacy policy page
 -[] Connect with accept cookies banner
 -[] Add accept or reject cookies functionality
 
 ## 404 Page
 -[x] Add 404 Page
 
+<!-- ultraview -->
+<!-- content image -->
