--- a/todo
+++ b/todo
@@ -1,3 +1,48 @@
+#  Fscore.ai website review 01/05/2025:
+# depends on Arvinder sir
+    2. [ ] Some text editing needs to be done by me.
+    5. [ ] Text on animations needs to be reviewed by me.
+    11. [ ] Start project with draftflow form at footer does not make any sense. UI/UX needs to look at it.
+    16. [ ] Instagram link does not work right now.
+    17. [ ] Facebook link also does not work.
+    
+# ignore
+    8. [ ] About section images need to be replaced.
+
+# confirm after review
+    6. [ ] FAQ section "expand/collapse" icons look too big. Make them smaller.
+    9. [ ] Standardize all UI elements. For example: FAQ section and Job Openings section should look similar.
+    10. [ ] Subscribed animation should show green check.
+        -> Add "Subscribed" text pop up animation
+        -> add placeholder as message "Thanks for Subscribing" shows after subscription
+    12. [ ] Book a demo form should fit in single page without scrolling on laptop. It is ok to scroll on phone.
+        -> To make this competible for all size of screens, its time consuming
+        -> for now i resize the demo form for laptop size screens: that fullfill this condition
+
+
+1. [ ] At startup, latency issues that cause text to appear default font, and time for all the GIFs/videos to appear.
+3. [x] Homepage Section 2 animation is still missing. Please add.
+4. [x] Homepage "From Our Community" Section, I want to see 3rd card in the background. Currently it just appears suddenly when you press the button on the right.
+14. [x] Contact us form currently lets you submit without checking the "I agree..." checkbox. Make the checkbox mandatory.
+13. [x] Submitting book a demo form should collapse the form and only show "thank you for submitting, we will get back to you shortly" message.
+15. [x] On footer, remove "Community" link. We do not have that working right now.
+
+18. [ ] Arvinder to work on Terms of Use and Privacy Policy page.
+19. [ ] Cookies customization button does not work.
+20. [ ] Lots of improvement can be made on the code. Please standardize file naming system, folder structures, variable names, function names, commenting, linting.
+21. [ ] Stacked card animation: Cards that are already placed on screen should not be rotating. Please keep them static.
+22. [ ] "Learn More" button on stacked card section does not go anywhere. Arvinder to discuss with UI/UX.
+23. [ ] Stacked card animation does not work for mobile. Please make it work similarly.
+
+
+
+
+
+
+
+
+
+
 ## Database
 -[x] Setup Vercel Postgres: https://vercel.com/storage/postgres
 
