--- a/todo
+++ b/todo
@@ -1,67 +1,39 @@
 #  Fscore.ai website review 01/05/2025:
 # depends on Arvinder sir
-    2. [ ] Some text editing needs to be done by me.
-    5. [ ] Text on animations needs to be reviewed by me.
-    11. [ ] Start project with draftflow form at footer does not make any sense. UI/UX needs to look at it.
+    2. [xx] Some text editing needs to be done by me.
+    5. [ ] Text on animations needs to be reviewed by me. Starting 01/13
+    11. [ ] Start project with draftflow form at footer, convert this to a subscribe form with subscribe alert message.
     16. [ ] Instagram link does not work right now.
     17. [ ] Facebook link also does not work.
-    19. [ ] Cookies customization button does not work.
-    22. [ ] "Learn More" button on stacked card section does not go anywhere. Arvinder to discuss with UI/UX.
+    19. [ ] Remove cookies dialog box for now.
+    22. [xx] "Learn More" button on stacked card section does not go anywhere. Arvinder to discuss with UI/UX.
     
 # ignore
-    8. [ ] About section images need to be replaced.
+    8. [xx] About section images need to be replaced.
 
 # confirm after review
-    6. [x] FAQ section "expand/collapse" icons look too big. Make them smaller.
-    9. [x] Standardize all UI elements. For example: FAQ section and Job Openings section should look similar.
-    10. [x] Subscribed animation should show green check.
-        -> Add "Subscribed" text pop up animation
-        -> add placeholder as message "Thanks for Subscribing" shows after subscription
-    12. [x] Book a demo form should fit in single page without scrolling on laptop. It is ok to scroll on phone.
+    6. [xx] FAQ section "expand/collapse" icons look too big. Make them smaller.
+    9. [xx] Standardize all UI elements. For example: FAQ section and Job Openings section should look similar.
+    10. [] Turn subscribe button background to green after subscribe animation.
+    12. [xx] Book a demo form should fit in single page without scrolling on laptop. It is ok to scroll on phone.
         -> To make this competible for all size of screens, its time consuming
         -> for now i resize the demo form for laptop size screens: that fullfill this condition
-    23. [ ] Stacked card animation does not work for mobile. Please make it work similarly.
+    23. [xx] Stacked card animation does not work for mobile. Please make it work similarly.
         -> not add animaion on mobile but make it responsive for all devices (tabs, pc, mobile)
+    24. [ ] Remove "Learn More" button below stacked cards in all devices.
+    25. [ ] Testimonials - make cards centered on all screens.
+    26. [ ] Standardize alert message for all form submissions. Including placement on screen.
+    27. [ ] Add TOC of Cookies as sent before.
 
-
-
-1. [ ] At startup, latency issues that cause text to appear default font, and time for all the GIFs/videos to appear.
-3. [x] Homepage Section 2 animation is still missing. Please add.
-4. [x] Homepage "From Our Community" Section, I want to see 3rd card in the background. Currently it just appears suddenly when you press the button on the right.
-14. [x] Contact us form currently lets you submit without checking the "I agree..." checkbox. Make the checkbox mandatory.
-13. [x] Submitting book a demo form should collapse the form and only show "thank you for submitting, we will get back to you shortly" message.
-15. [x] On footer, remove "Community" link. We do not have that working right now.
-18. [x] Arvinder to work on Terms of Use and Privacy Policy page.
-21. [x] Stacked card animation: Cards that are already placed on screen should not be rotating. Please keep them static.
-
+1. [ ] At startup, latency issues that cause text to appear default font, and time for all the GIFs/videos to appear. Make default text "Sans Serif" instead of "Serif".
+3. [xx] Homepage Section 2 animation is still missing. Please add.
+4. [xx] Homepage "From Our Community" Section, I want to see 3rd card in the background. Currently it just appears suddenly when you press the button on the right.
+14. [xx] Contact us form currently lets you submit without checking the "I agree..." checkbox. Make the checkbox mandatory.
+13. [xx] Submitting book a demo form should collapse the form and only show "thank you for submitting, we will get back to you shortly" message.
+15. [xx] On footer, remove "Community" link. We do not have that working right now.
+18. [xx] Arvinder to work on Terms of Use and Privacy Policy page.
+21. [xx] Stacked card animation: Cards that are already placed on screen should not be rotating. Please keep them static.
 20. [ ] Lots of improvement can be made on the code. Please standardize file naming system, folder structures, variable names, function names, commenting, linting.
-
-
-
-
-
-
-
-
-
-
-
-## Database
--[x] Setup Vercel Postgres: https://vercel.com/storage/postgres
-
-## Site-wide
--[x] Make all backgrounds consistent
--[] Make mobile-friendly (check after final)
--[] Optimize SEO (after content)
-
-## Navigation 
--[x] Make mobile-friendly 
--[x] Padding around nav
--[x] Dark mode button (left-right toggle)
--[] Logo
--[x] Padding on large screen
--[] Make mobile-friendly navbar and nav menu
--[] Change color of nav symbol to white in dark mode
 
 
 
